@@ -42,6 +42,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #7748: Since unicode values are supported for some metadata options
+  in Distutils, the DistributionMetadata get_* methods will now return an utf-8
+  encoded string for them. This ensure that the upload and register commands
+  send the right values to PyPI without any error.
+
 - Issue #1670765: Prevent email.generator.Generator from re-wrapping
   headers in multipart/signed MIME parts, which fixes one of the sources of
   invalid modifications to such parts by Generator.
@@ -186,7 +191,7 @@ Library
 - Distutils now correctly identifies the build architecture as "x86_64"
   when building on OSX 10.6 without "-arch" flags.
 
-- Issue #7556: Distutils' msvc9compiler now opens the MSVC Manifest 
+- Issue #7556: Distutils' msvc9compiler now opens the MSVC Manifest
   file in text mode.
 
 - Issue #7552: Removed line feed in the base64 Authorization header in
